# rvoip

./: .gitignore  AUDIT_REPORT_CN.md  AUDIT_REPORT_V2_CN.md  CHANGELOG.md  COMMUNITY_ANNOUNCEMENT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_PLAN_FIXES.md  IMPLEMENTATION_PROGRESS.md  MISSING_COMPONENTS.md  PROJECT_COMPREHENSIVE_AUDIT.md  PROJECT_DEEP_ANALYSIS.md  PROJECT_HEALTH.md  QUICKSTART.md  README.md  REPO_SETUP_GUIDE.md  ROADMAP.md  RVOIP Unimplemented Features Implementation Plan.md  SECURITY.md  SESSION_CORE_COMPARISON.md  SIMPLIFIED_BLOCKING_API_PLAN.md  SYSTEM_AUDIT_REPORT.md  TESTING_STRATEGY.md  TEST_PLAN.md  VERSION_STRATEGY.md  WALKTHROUGH_FINAL.md  WALKTHROUGH_FIXES.md  WARP.md  docker-compose.yml  stress_test.sh  统一到 session-core-v3 并修正架构.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
crates/audio-core/src/: error.rs  types.rs
crates/audio-core/src/device/: cpal_backend.rs
crates/audio-core/src/format/: mod.rs
crates/audio-core/src/pipeline/: mod.rs
crates/audio-core/src/rtp/: mod.rs
crates/auth-core/src/: config.rs  jwks.rs  jwt.rs  lib.rs  service.rs
crates/b2bua-core/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/b2bua-core/src/: call.rs  core.rs  lib.rs  processor.rs  state.rs
crates/call-engine/: Cargo.toml
crates/call-engine/migrations/: 20260112000000_create_registrations.sql  20260112000001_production_hardening.sql
crates/call-engine/src/: config.rs  error.rs  lib.rs
crates/call-engine/src/agent/: availability.rs  mod.rs  registration.rs  registry.rs  routing.rs  types.rs
crates/call-engine/src/api/: admin.rs  client.rs
crates/call-engine/src/database/: mod.rs
crates/call-engine/src/monitoring/: events.rs  metrics.rs  supervisor.rs
crates/call-engine/src/orchestrator/: agents.rs  bridge.rs  bridge_operations.rs  calls.rs  core.rs  handler.rs  lifecycle.rs  routing.rs
crates/call-engine/src/queue/: manager.rs  overflow.rs  policies.rs
crates/call-engine/src/routing/: engine.rs  policies.rs  skills.rs
crates/client-core/src/client/: manager.rs  media.rs
crates/dialog-core/src/api/: client.rs  common.rs  mod.rs  unified.rs
crates/media-core/src/: error.rs
crates/media-core/src/relay/: mod.rs
crates/media-server-core/: Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_CONFERENCE.md
crates/media-server-core/src/: conference.rs  lib.rs
crates/proxy-core/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/proxy-core/src/: lib.rs  load_balancer.rs
crates/registrar-core/: Cargo.toml
crates/registrar-core/src/: error.rs  events.rs  lib.rs  storage.rs  types.rs
crates/registrar-core/src/registrar/: mod.rs  registry.rs
crates/registrar-core/src/storage/: sqlite.rs
crates/rvoip/: Cargo.toml  README.md
crates/rvoip/src/: lib.rs  main.rs
crates/rvoip/tests/: system_integration.rs
crates/sbc-core/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/sbc-core/src/: lib.rs  nat.rs  rate_limit.rs
crates/session-core/: README.md
crates/session-core-v2/: Cargo.toml  README.md
crates/session-core-v2/src/: lib.rs
crates/session-core-v3/: Cargo.toml  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  SIMPLEPEER_BUILDER_PATTERN_PLAN.md  SIMPLEPEER_COMPLETION_PLAN.md
crates/session-core-v3/docs/: ADAPTER_ARCHITECTURE_EXPLANATION.md  ARCHITECTURE_OVERVIEW.md  ATTENDED_TRANSFER_IMPLEMENTATION_PLAN.md  AUTH_REGISTRATION_PRESENCE_INTEGRATION_PLAN.md  B2BUA_IMPLEMENTATION_PLAN.md  BLIND_TRANSFER_COMPLETE_IMPLEMENTATION.md  BLIND_TRANSFER_IMPLEMENTATION_PLAN.md  BYE_MESSAGE_ANALYSIS.md  DIALOG_INTERFACE.md  EVENT_FLOW_DIAGRAMS.md  HELPER_VS_MESSAGE_PASSING.md  MEDIA_INTERFACE.md  RFC_3515_COMPLIANCE_PLAN.md  RFC_3515_IMPLEMENTATION_STATUS.md  STATE_EVENT_ACTION_MAPPING.md  STATE_TABLE_CONFIGURATION.md  THREE_TRANSFER_TYPES_DESIGN.md  TRANSFER_DESIGN_PROPOSAL.md  TRANSFER_FIX_IMPLEMENTATION_PLAN.md  TRANSFER_RFC_ANALYSIS.md
crates/session-core-v3/examples/api_peer_audio/: README.md  audio_utils.rs  peer1.rs  peer2.rs  peer_audio_states.yaml  run_audio_test.sh
crates/session-core-v3/examples/blind_transfer/: README.md  peer1_caller.rs  peer2_transferor.rs  peer3_target.rs  run_blind_transfer.sh
crates/session-core-v3/examples/thread_benchmark/: run_multi_process.sh  uac_caller.rs  uas_answerer.rs
crates/session-core-v3/src/: create.rs  errors.rs  lib.rs  session.rs  session_registry.rs  types.rs
crates/session-core-v3/src/adapters/: dialog_adapter 2.rs  dialog_adapter.rs  event_router.rs  media_adapter.rs  mod.rs  session_event_handler.rs
crates/session-core-v3/src/api/: builder.rs  callbacks.rs  events.rs  mod.rs  simple.rs  simple_new.rs  types.rs  unified.rs
crates/session-core-v3/src/api/registration/: mod.rs
crates/session-core-v3/src/session_store/: cleanup.rs  history.rs  inspection.rs  mod.rs  state.rs  store.rs
crates/session-core-v3/src/state_machine/: actions.rs  effects.rs  executor.rs  guards.rs  helpers.rs  mod.rs
crates/session-core-v3/src/state_table/: builder.rs  mod.rs  types.rs  yaml_loader.rs
crates/session-core-v3/src/transfer/: mod.rs  notify.rs  types.rs
crates/session-core-v3/state_tables/: default.yaml
crates/session-core-v3/tests/: simple_api_tests.rs  state_table_validation_tests.rs  unified_api_tests.rs
crates/session-core/src/: lib.rs
crates/sip-client/src/: advanced.rs  degradation.rs  reconnect.rs  recovery.rs
crates/sip-transport/src/: error.rs
crates/users-core/: Cargo.toml
crates/users-core/src/api/: mod.rs  rate_limit.rs
crates/users-core/src/user_store/: mod.rs
docs/: INDEX.md
docs/adr/: README.md  adr-0001-three-session-core-versions.md
examples/secure-server-demo/: Cargo.toml
examples/secure-server-demo/src/: main.rs
github-workflows-recommended/: README.md
openspec/: project.md
openspec/changes/add-auth-core-implementation/: proposal.md  tasks.md
openspec/changes/audit-fixes-jan-2026/: proposal.md
openspec/changes/refactor-unify-session-core-v3/: proposal.md  tasks.md
(+262 files in other folders)
