[package]
name = "rvoip-b2bua-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rvoip-sip-core.workspace = true
rvoip-dialog-core.workspace = true
rvoip-infra-common.workspace = true
rvoip-media-core.workspace = true
# NOTE: sbc-core dependency removed - SBC should depend on B2BUA, not vice versa
# Security processing is now done via optional RequestProcessor trait injection
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dashmap.workspace = true
uuid.workspace = true
