[package]
name = "rvoip-call-engine"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "Call center engine and advanced call management for the rvoip stack"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true
[dependencies]
# 🎯 INTERNAL CRATES - Use workspace dependencies (no version needed!)
rvoip-sip-core.workspace = true
rvoip-sip-transport.workspace = true
rvoip-dialog-core.workspace = true
rvoip-infra-common.workspace = true
# MIGRATION NOTE: call-engine currently uses v1 for CallCenterEngine/SessionCoordinator.
# Full migration to v3 (UnifiedCoordinator/SimplePeer) requires significant refactoring.
# See VERSION_STRATEGY.md for migration timeline.
rvoip-session-core.workspace = true
# v3 added for gradual migration of new features
rvoip-session-core-v3.workspace = true

# Database - Modern async approach with sqlx
# Replace rusqlite/r2d2 with sqlx for true async support
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite", 
    "chrono", 
    "uuid",
    "migrate",
    "macros"
] }

# Web framework
axum = "0.7"

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
bytes = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Collections
dashmap = "5.5"
parking_lot = "0.12"

# For examples
clap = { version = "4.5", features = ["derive"] }
rvoip-client-core.workspace = true
rvoip-b2bua-core.workspace = true
rvoip-media-server-core.workspace = true
rvoip-proxy-core.workspace = true
rvoip-sbc-core.workspace = true

[dev-dependencies]
# Testing
tokio-test = "0.4"
serial_test = "3.1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[example]]
name = "e2e_test_server"
path = "examples/e2e_test/server/basic_call_center_server.rs"

[[example]]
name = "e2e_test_agent"
path = "examples/e2e_test/agent/agent_client.rs" 
