[package]
name = "rvoip-media-server-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rvoip-rtp-core.workspace = true
rvoip-media-core.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
