[package]
name = "rvoip-proxy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rvoip-sip-core.workspace = true
rvoip-sip-transport.workspace = true
rvoip-dialog-core.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
dashmap.workspace = true
