[package]
name = "rvoip"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "Complete VoIP stack - SIP, RTP, media processing, and client/server APIs"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true

[dependencies]
# 🎯 ALL INTERNAL CRATES - Use workspace dependencies (no version needed!)
rvoip-sip-core.workspace = true
rvoip-sip-transport.workspace = true
# transaction-core has been merged into dialog-core
rvoip-dialog-core.workspace = true
rvoip-rtp-core.workspace = true
rvoip-media-core.workspace = true
rvoip-session-core.workspace = true
rvoip-call-engine.workspace = true
rvoip-client-core.workspace = true
rvoip-sip-client.workspace = true
rvoip-b2bua-core.workspace = true
rvoip-proxy-core.workspace = true
rvoip-media-server-core.workspace = true
rvoip-sbc-core.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
anyhow.workspace = true
serial_test.workspace = true