[package]
name = "users-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "User management and authentication service for RVoIP"

[features]
default = []
client = ["reqwest"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono", "uuid"] }

# Password hashing
argon2 = "0.5"
password-hash = "0.5"

# JWT
jsonwebtoken = "9.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async traits
async-trait = "0.1"

# Web framework (for REST API)
axum = { version = "0.7", features = ["http2", "json", "tokio", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# Cryptography
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# HTTP client (for examples)
reqwest = { version = "0.12", features = ["json"], optional = true }
rsa = { version = "0.9", features = ["pem"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
futures = "0.3"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "sip_register_flow"
path = "examples/sip_register_flow.rs"

[[example]]
name = "token_validation"
path = "examples/token_validation.rs"

[[example]]
name = "api_key_service"
path = "examples/api_key_service.rs"

[[example]]
name = "multi_device_presence"
path = "examples/multi_device_presence.rs"

[[example]]
name = "session_core_v2_integration"
path = "examples/session_core_v2_integration.rs"

[[example]]
name = "rest_api_demo_server"
path = "examples/rest_api_demo/server.rs"

[[example]]
name = "rest_api_demo_client"
path = "examples/rest_api_demo/client.rs"
required-features = ["client"]

[[test]]
name = "security_sql_injection_tests"
path = "tests/security_sql_injection_tests.rs"

[[test]]
name = "security_timing_attack_tests"
path = "tests/security_timing_attack_tests.rs"

[[test]]
name = "security_input_validation_tests"
path = "tests/security_input_validation_tests.rs"

[[test]]
name = "security_rate_limiting_tests"
path = "tests/security_rate_limiting_tests.rs"

[lints]
workspace = true
