[package]
name = "secure-server-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
rustls = "0.21"
rustls-pemfile = "1.0"
chrono = "0.4"

# Internal path dependencies
rvoip-registrar-core = { path = "../../crates/registrar-core" }
rvoip-sip-transport = { path = "../../crates/sip-transport" }
rvoip-session-core-v3 = { path = "../../crates/session-core-v3", features = ["persistence"] }
rvoip-infra-common = { path = "../../crates/infra-common" }

[workspace]